--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator</title>
-    <meta property="og:image" content="images/share.png">
+    <meta property="og:image" content="images/ogimage.png">
     <link rel="icon" href="images/icon.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
